feat: add stateful entity relationships